@@ -116,6 +116,7 @@ char *o_keytag = NULL;
 static int all_flag = 0;
 static int ds_flag = 0;
 static int retire_flag = 1;
+static int notify_flag = 1;
 static int verbose_flag = 0;
 static int xml_flag = 1;
 static int td_flag = 0;
@@ -351,7 +352,8 @@ usage_keydsseen ()
             /*"\t--zone <zone> (or --all)                 aka -z\n"*/
             "\t--zone <zone>                            aka -z\n"
             "\t--keytag <keytag> | --cka_id <CKA_ID>    aka -x / -k\n"
-            "\t--no-retire\n");
+            "\t[--no-notify|-l]                         aka -l\n"
+            "\t[--no-retire|-f]                         aka -f\n");
 }
 
     void
@@ -2882,9 +2884,15 @@ cmd_dsseen()
                 } else {
 					/* ...Unless this looks like a new zone, in which case poke
 					   the enforcerd */
-					if (restart_enforcerd() != 0)
-					{
-						fprintf(stderr, "Could not HUP ods-enforcerd\n");
+					if (notify_flag == 1) {
+						if (restart_enforcerd() != 0) {
+							fprintf(stderr, "Could not HUP ods-enforcerd\n");
+						} else {
+							printf("Performed a HUP ods-enforcerd\n");
+						}
+					} else {
+						printf("No HUP ods-enforcerd was performed as the '--no-notify' flag was specified.\n");
+						printf("Warning: The enforcer must be manually notified or the changes will not take full effect until the next scheduled enforcer run.\n");						
 					}
 					return 0;
 				}
@@ -2903,11 +2911,16 @@ cmd_dsseen()
         }
     }
 
-    /* Need to poke the enforcer to wake it up */
-    if (restart_enforcerd() != 0)
-    {
-        fprintf(stderr, "Could not HUP ods-enforcerd\n");
-    }
+	if (notify_flag == 1) {
+		if (restart_enforcerd() != 0) {
+			fprintf(stderr, "Could not HUP ods-enforcerd\n");
+		} else {
+			printf("Performed a HUP ods-enforcerd\n");
+		}
+	} else {
+		printf("No HUP ods-enforcerd was performed as the '--no-notify' flag was specified.\n");
+		printf("Warning: The enforcer must be manually notified or the changes will not take full effect until the next scheduled enforcer run.\n");						
+	}
 
     /* Release sqlite lock file (if we have it) */
     db_disconnect(lock_fd);
@@ -3571,6 +3584,7 @@ main (int argc, char *argv[])
         {"help",    no_argument,       0, 'h'},
         {"input",   required_argument, 0, 'i'},
         {"cka_id",  required_argument, 0, 'k'},
+        {"no-notify", no_argument,       0, 'l'},
         {"no-xml",  no_argument,        0, 'm'},
         {"interval",  required_argument, 0, 'n'},
         {"output",  required_argument, 0, 'o'},
@@ -3590,7 +3604,7 @@ main (int argc, char *argv[])
 
     progname = argv[0];
 
-    while ((ch = getopt_long(argc, argv, "ab:c:de:fg:hi:k:n:o:p:r:s:t:vVw:x:y:z:Z", long_options, &option_index)) != -1) {
+    while ((ch = getopt_long(argc, argv, "ab:c:de:fg:hi:k:ln:o:p:r:s:t:vVw:x:y:z:Z", long_options, &option_index)) != -1) {
         switch (ch) {
             case 'a':
                 all_flag = 1;
@@ -3625,6 +3639,9 @@ main (int argc, char *argv[])
                 break;
             case 'k':
                 o_cka_id = StrStrdup(optarg);
+                break;
+            case 'l':
+                notify_flag = 0;
                 break;
             case 'm':
                 xml_flag = 0;
