@@ -5,6 +5,8 @@ OpenDNSSEC 1.3.16rc1
 * OPENDNSSEC-458: Add 'ods-enforcerd -p <policy>' option. This prompts the 
   enforcer to run once and only process the specified policy and associated
   zones. 
+* OPENDNSSEC-460: ods-ksmutil: Add an option to the 'ods-ksmutil key ds-seen'
+  command so the user can choose not to notify the enforcer. 
 
 OpenDNSSEC 1.3.15 - 2013-09-19
 
